<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Res01</string>
    
    <string name="button01_text">Just Dialog</string>
    <string name="button02_text">Yes, Maybe and No</string>
    <string name="button03_text">Items</string>
    <string name="button04_text">Single choice</string>
    <string name="button05_text">Multiple choice</string>
    <string name="button06_text">Custom layout</string>
    
    <string name="dialog01_title_text">Demo</string>
    <string name="dialog01_message_text">Dialog01Activity</string>
    
    <string name="dialog02_title_text">Question</string>
    <string name="dialog02_message_text">Are you hungry?</string>
    <string name="dialog02_button_yes_text">Yes</string>
    <string name="dialog02_button_maybe_text">Maybe</string>
    <string name="dialog02_button_no_text">No</string>
    
    <string name="dialog06_title_text">Sign in</string>
    <string name="dialog06_button_signin_text">Signin</string>
    
    <string name="select_text">Select...</string>
    
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    
    <string name="menu_add_text">Add</string>
    <string name="menu_delete_text">Delete</string>
    <string name="menu_help_text">Help</string>
    <string name="menu_more_text">More</string>
    <string name="menu_camera_text">Camera</string>
    <string name="menu_compass_text">Compass</string>
    <string name="menu_upload_text">Upload</string>
    
    <string name="simon_username">simon@gmail.com</string>
    <string name="simon_password">iamsimon</string>
    
    <string name="signin_success">Success!</string>
    <string name="signin_failure">Failure!</string>
</resources>
