<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/main_menu_add"
        android:title="@string/menu_add_text"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always" />
    
    <item 
        android:id="@+id/main_menu_delete"
        android:title="@string/menu_delete_text"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always" />
    
    <item 
        android:id="@+id/main_menu_help"
        android:title="@string/menu_help_text"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="always" />
    
    <item 
        android:title="@string/menu_more_text"
        android:icon="@android:drawable/ic_menu_more"
        android:showAsAction="always">
        <!-- 第二層選單 -->        
        <menu>
            <item
                android:title="@string/menu_camera_text" 
		        android:icon="@android:drawable/ic_menu_camera"
		        android:showAsAction="always" />
            <item 
                android:title="@string/menu_compass_text"
                android:icon="@android:drawable/ic_menu_compass"
                android:showAsAction="always" />
            <item 
                android:title="@string/menu_upload_text"
                android:icon="@android:drawable/ic_menu_upload"
                android:showAsAction="always" />
        </menu>
        
    </item>
</menu>
